# your_custom_role_v2

./: .gitignore  README.md  pyproject.toml  start.sh
knowledge/: user_preference.txt
src/your_custom_role_v2/: CrewCustomHandler.py  TrainHandler.py  crew.py  main.py  test_long_term_memory_storage.db
src/your_custom_role_v2/config/: agents.yaml  tasks.yaml
src/your_custom_role_v2/embedding/: ZhiPuEmbedding.py
src/your_custom_role_v2/entity/: WebEntity.py
src/your_custom_role_v2/listener/: RoleListener.py
src/your_custom_role_v2/long_history/: long_term_memory_storage.db
