[project]
name = "your_custom_role_v2"
version = "0.1.0"
description = "your_custom_role_v2 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "agentops>=0.4.10",
    "crewai[tools]>=0.114.0,<1.0.0",
    "zhipuai>=2.1.5.20250421",
]

[project.scripts]
your_custom_role_v2 = "your_custom_role_v2.main:run"
run_crew = "your_custom_role_v2.main:run"
train = "your_custom_role_v2.main:train"
replay = "your_custom_role_v2.main:replay"
test = "your_custom_role_v2.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
